--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <button id="btn-rock">Rock</button>
+    <button id="btn-paper">Paper</button>
+    <button id="btn-scissors">Scissors</button>
+    <div id="result"></div>
 </body>
 </html>
