--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style src="style.css"></style>
     <script src="app.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <button id="btn-rock">Rock</button>
-    <button id="btn-paper">Paper</button>
-    <button id="btn-scissors">Scissors</button>
-    <div id="result"></div>
+    <div class="button-container">
+        <button id="btn-rock">Rock</button>
+        <button id="btn-paper">Paper</button>
+        <button id="btn-scissors">Scissors</button>
+    </div>
+    <div id="roundResult"></div>
+    <div id="gameResult"></div>
 </body>
 </html>
